--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>My Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="resume.css">
   </head>
   <body>
     <header>
