--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="scroll-btn">
-      <div class="scroll-bar"><a href=""><span></span></a></div>
+      <div class="scroll-bar"><a href="#about"><span></span></a></div>
     </div>
   </header>
   
@@ -32,28 +32,31 @@
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#"><img src="img/alvin.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa fa-bars"></i>
+          <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">HOME</a>
+              <a class="nav-link" href="#top">HOME</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">ABOUT ME</a>
+              <a class="nav-link" href="#about">ABOUT ME</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">RESUME</a>
+              <a class="nav-link" href="#resume">RESUME</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">CONTACT ME</a>
+              <a class="nav-link" href="#services">SERVICES</a>
             </li>
-        </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">CONTACT ME</a>
+            </li>
+          </ul>
         </div>
-    </nav>
-  </div>
+      </nav>
+    </div>
   <!-------About section------->
-  <div class="about container" id="about">
+    <div class="about container" id="about">
       <div class="row">
         <div class="col-md-6 text-center">
           <img src="img/pose.jpg" class="profile-img">
@@ -85,7 +88,7 @@
           </div>
         </div>
       </div>
-  </div>
+    </div>
 
   <!-------------social icons----------->
   <div class="social-icons">
@@ -225,5 +228,11 @@
       <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
     </div>
   </footer>
+
+  <!----------Smooth Scroll------------>
+  <script type="text/javascript" src="js/smooth-scroll.js"></script>
+  <script>
+    var scroll = new SmoothScroll('a[href*="#"]');
+  </script> 
 </body>
 </html>
